fix overflow-x and add blockout for nav

--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@
       margin: 0;
     }
 
+    #nav-view {
+      display: none;
+      height: 100px;
+      width: calc(100% - 100px);
+      margin-left: 50px;
+      border: 1px solid #000;
+    }
+
+    #nav-view.nav-is-open {
+      display: block;
+    }
+
     button {
       border-radius: 50%;
       font-size: 15px;
@@ -20,7 +32,7 @@
     }
 
     #cards {
-        position: absolute;
+        position: relative;
         width: calc(100% - 100px);
         left: 50px;
         height: 100%;
@@ -54,6 +66,7 @@
     .container {
       padding-top: 40px;
       width: 100%;
+      overflow-x: hidden;
     }
 
     .card {
